add: parametrizado y razones de bloqueo para gestión de usuarios
(#34 → Todavía queda pulir el bloqueo y desbloqueo automáticos)